--- a/netbeans_projects/SmartMeterWeb/public_html/index.html
+++ b/netbeans_projects/SmartMeterWeb/public_html/index.html
@@ -13,7 +13,9 @@ and open the template in the editor.
         <script type="text/javascript" src="js/devices.js"></script>
         <script type="text/javascript" src="js/gas.js"></script>
         <script type="text/javascript" src="js/elec.js"></script>
-
+        <script type="text/javascript" src="js/libs/jquery.sparkline.min.js"></script>
+        
+        
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
         <link rel="stylesheet" type="text/css" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
         <script>
@@ -29,6 +31,6 @@ and open the template in the editor.
     <body>
         <div id="wrap">
             <ul></ul>
-        </div>
+        </div> 
     </body>
 </html>
