--- a/netbeans_projects/SmartMeterWeb/public_html/index.html
+++ b/netbeans_projects/SmartMeterWeb/public_html/index.html
@@ -15,9 +15,10 @@ and open the template in the editor.
         <script type="text/javascript" src="js/elec.js"></script>
         <script type="text/javascript" src="js/libs/jquery.sparkline.min.js"></script>
         
-        
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-        <link rel="stylesheet" type="text/css" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
+		<link rel="stylesheet" type="text/css" href="css/cell_styles.css">
+
         <script>
             var devices = new Array();
             var globalUrl = 'http://192.168.2.10:8080/SmartMeter';
